--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,8 @@
 
   <body class="min-h-screen bg-gray-50">
     <%= render "shared/navbar" %>
-    
+    <%= render "shared/alerts" %>
+
     <main>
       <%= yield %>
     </main>
