--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -27,6 +27,11 @@
         </div>
       </div>
 
+      <div class="flex items-center">
+        <%= f.check_box :role, { class: "h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded" }, "host", "guest" %>
+        <%= f.label :role, "I want to be a host", class: "ml-2 block text-sm text-gray-900" %>
+      </div>
+
       <div>
         <%= f.submit "Sign up", class: "group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
       </div>
