--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,12 +30,6 @@
       <%= yield %>
     </main>
 
-    <footer class="bg-white border-t border-gray-200 mt-12">
-      <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
-        <p class="text-center text-gray-500 text-sm">
-          © <%= Time.current.year %> UInnova. All rights reserved.
-        </p>
-      </div>
-    </footer>
+    <%= render "shared/footer" %>
   </body>
 </html>
